# Customer-Analytics-ML

./: .gitignore  01_eda.ipynb  02_regression.ipynb  02b_regression_new_customers.ipynb  03_classification.ipynb  04_clustering.ipynb  05_deep_learning.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  eda_modeling.ipynb  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
Data/: clustered_customers.csv
data/: README.md
data/raw/: README.md
docs/: 01_eda_analysis.md  02_regression_analysis.md  03_classification_analysis.md
models/: regression_results.csv
notebooks/: 01_eda.ipynb  03_classification.ipynb  03b_classification_segmented.ipynb  04_clustering.ipynb  README.md  Untitled-10.ipynb
reports/: 00_executive_summary.md  01_eda_analysis.md  02_regression_analysis.md  03_classification_analysis.md  04_clustering_analysis.md  05_deep_learning_analysis.md
scripts/: generate_report.py  run_analysis.py
src/: __init__.py  config.py  data_loader.py  evaluation.py  logging_config.py  models.py  preprocessing.py  visualization.py
tests/: __init__.py  conftest.py  test_config.py  test_evaluation.py  test_models.py  test_preprocessing.py
